// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigCacheTestCases optimization minimize-svg-data-url minimize-svg-data-url should compile: disabled css 1`] = `".icon{background:url(\\"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'   viewBox='0 0 2 2' >  <rect   width='1'   height='1' />  </svg>\\")}"`;

exports[`ConfigCacheTestCases optimization minimize-svg-data-url minimize-svg-data-url should compile: disabled html 1`] = `
"<!doctype html><html lang=en><head><title>svg data urls</title><style>.inline{background:url(\\"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'   viewBox='0 0 3 3' >  <circle   r='1' />  </svg>\\")}</style></head><body>
<img alt src=\\"data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'   viewBox='0 0 4 4' >  <path   d='M0 0h4' />  </svg>\\">
<svg viewBox=\\"0 0 5 5\\">  <rect width=5 />  </svg>


</body></html>"
`;

exports[`ConfigCacheTestCases optimization minimize-svg-data-url minimize-svg-data-url should compile: future css 1`] = `".icon{background:url(\\"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 2'>  <rect width='1' height='1'/>  </svg>\\")}"`;

exports[`ConfigCacheTestCases optimization minimize-svg-data-url minimize-svg-data-url should compile: future html 1`] = `
"<!doctype html><html lang=en><head><title>svg data urls</title><style>.inline{background:url(\\"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 3 3'>  <circle r='1'/>  </svg>\\")}</style></head><body>
<img alt src=\\"data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'>  <path d='M0 0h4'/>  </svg>\\">
<svg viewBox=\\"0 0 5 5\\">  <rect width=5 />  </svg>


</body></html>"
`;
